--- a/index.html
+++ b/index.html
@@ -1,22 +1,78 @@
-<!DOCTYPE html>
-<html lang="zh-Hant">
+<script type="text/javascript">
+        var gk_isXlsx = false;
+        var gk_xlsxFileLookup = {};
+        var gk_fileData = {};
+        function filledCell(cell) {
+          return cell !== '' && cell != null;
+        }
+        function loadFileData(filename) {
+        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
+            try {
+                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
+                var firstSheetName = workbook.SheetNames[0];
+                var worksheet = workbook.Sheets[firstSheetName];
+
+                // Convert sheet to JSON to filter blank rows
+                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
+                // Filter out blank rows (rows where all cells are empty, null, or undefined)
+                var filteredData = jsonData.filter(row => row.some(filledCell));
+
+                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
+                var headerRowIndex = filteredData.findIndex((row, index) =>
+                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
+                );
+                // Fallback
+                if (headerRowIndex === -1 || headerRowIndex > 25) {
+                  headerRowIndex = 0;
+                }
+
+                // Convert filtered JSON back to CSV
+                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
+                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
+                return csv;
+            } catch (e) {
+                console.error(e);
+                return "";
+            }
+        }
+        return gk_fileData[filename] || "";
+        }
+        </script><!DOCTYPE html>
+<html lang="zh-TW">
 <head>
-  <meta charset="UTF-8">
-  <title>我的遊戲網站</title>
-  <style>
-    body { font-family: sans-serif; padding: 20px; }
-    h1 { color: #333; }
-    ul { list-style-type: none; padding: 0; }
-    li { margin-bottom: 10px; }
-    a { text-decoration: none; color: blue; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>我的遊戲列表</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>🎮 我的遊戲列表</h1>
-  <ul>
-    <li><a href="games/game-1/index.html">簡易射擊遊戲</a></li>
-    <li><a href="games/game-2/index.html">模擬經營遊戲</a></li>
-    <!-- 可繼續加其他遊戲 -->
-  </ul>
+    <header>
+        <nav>
+            <h1>🎮 我的遊戲列表</h1>
+            <ul>
+                <li><a href="#shooting-game">簡易射擊遊戲</a></li>
+                <li><a href="#simulation-game">模擬經營遊戲</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="shooting-game">
+            <h2>簡易射擊遊戲</h2>
+            <div class="game-preview">
+                <p>遊戲預覽圖即將上傳</p>
+            </div>
+            <p>這是一款簡易的射擊遊戲，玩家需要擊敗敵人並獲得高分。</p>
+        </section>
+        <section id="simulation-game">
+            <h2>模擬經營遊戲</h2>
+            <div class="game-preview">
+                <p>遊戲預覽圖即將上傳</p>
+            </div>
+            <p>在這款模擬經營遊戲中，玩家可以體驗經營自己的虛擬企業。</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 我的遊戲列表. All rights reserved.</p>
+    </footer>
 </body>
 </html>
