--- a/games/game-1/index.html
+++ b/games/game-1/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>簡單射擊遊戲1.5</title>
-    <link rel="stylesheet" href="styles.css">
-    <style>
-        body { margin: 0; overflow: hidden; background-color: #111; }
-        canvas { display: block; }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="一個簡單有趣的射擊遊戲">
+    <meta name="theme-color" content="#111">
+    <title>射擊遊戲</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
-    <canvas id="gameCanvas"></canvas>
-    <script src="script.js"></script>
+    <div id="game-container">
+        <canvas id="gameCanvas"></canvas>
+        <div id="game-over" class="hidden">
+            <h2>遊戲結束</h2>
+            <p>得分：<span id="final-score">0</span></p>
+            <button id="restart-button">重新開始</button>
+        </div>
+    </div>
+    <script src="js/script.js"></script>
 </body>
+
 </html>
