--- a/admin.html
+++ b/admin.html
@@ -502,7 +502,8 @@
         操作成功完成！
     </div>
 
-    <script src="assets/js/analytics.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="assets/js/error-handler.js"></script>
     <script src="assets/js/admin.js"></script>
     <script>
         // 載入狀態控制
