--- a/index.html
+++ b/index.html
@@ -530,8 +530,7 @@
         </div>
     </div>
 
-    <script src="assets/js/error-handler.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/scripts.js"></script>
     <script>
         // 移動端選單
         const mobileMenuBtn = document.getElementById('mobileMenuBtn');
