--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
     </style>
 </head>
 <body>
+    <!-- 主題切換按鈕 -->
+    <button id="themeSwitch" class="theme-switch" aria-label="切換主題">
+        <i class="fas fa-moon"></i>
+    </button>
+
     <!-- 載入核心功能 -->
     <script src="assets/js/error-handler.js"></script>
     <script src="assets/js/storage-manager.js"></script>
