--- a/index.html
+++ b/index.html
@@ -155,18 +155,18 @@
     </button>
 
     <!-- 載入核心功能 -->
-    <script src="assets/js/theme-switcher.js"></script>
-    <script src="assets/js/error-handler.js"></script>
-    <script src="assets/js/storage-manager.js"></script>
-    <script src="assets/js/notification.js"></script>
+    <script src="assets/js/theme-switcher.js" defer></script>
+    <script src="assets/js/error-handler.js" defer></script>
+    <script src="assets/js/storage-manager.js" defer></script>
+    <script src="assets/js/notification.js" defer></script>
 
     <!-- 載入業務邏輯 -->
-    <script src="assets/js/comment-system.js"></script>
-    <script src="assets/js/game-manager.js"></script>
-    <script src="assets/js/rating-system.js"></script>
-    <script src="assets/js/search-filter.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/comment-system.js" defer></script>
+    <script src="assets/js/game-manager.js" defer></script>
+    <script src="assets/js/rating-system.js" defer></script>
+    <script src="assets/js/search-filter.js" defer></script>
+    <script src="assets/js/main.js" defer></script>
+    <script src="assets/js/scripts.js" defer></script>
 
     <!-- 載入 Service Worker -->
     <script>
